@@ -1,14 +1,14 @@
 package tk.mwacha.infrastructure.customer.gateway;
 
-import java.util.List;
-import java.util.UUID;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import tk.mwacha.domain.customer.entity.Customer;
 import tk.mwacha.domain.customer.repository.CustomerRepositoryInterface;
 import tk.mwacha.infrastructure.customer.model.CustomerModel;
 import tk.mwacha.infrastructure.customer.repository.CustomerRepository;
+
+import java.util.List;
+import java.util.UUID;
 
 @Service
 @RequiredArgsConstructor
@@ -30,7 +30,6 @@ public class CustomerGateway implements CustomerRepositoryInterface {
 
   @Override
   public Customer find(UUID id) {
-    var all = repository.findAll();
     var customerModel = repository.findById(id).orElseThrow(RuntimeException::new);
 
     return CustomerModel.to(customerModel);
@@ -38,11 +37,11 @@ public class CustomerGateway implements CustomerRepositoryInterface {
 
   @Override
   public List<Customer> findAll() {
-    return repository.findAll().stream().map(CustomerModel::to).collect(Collectors.toList());
+    return repository.findAll().stream().map(CustomerModel::to).toList();
   }
 
   public void createAll(List<Customer> entities) {
-    var customers = entities.stream().map(CustomerModel::of).collect(Collectors.toList());
+    var customers = entities.stream().map(CustomerModel::of).toList();
     this.repository.saveAll(customers);
   }
 }
